[gd_scene load_steps=3 format=3 uid="uid://7fwlp504k7r0"]

[ext_resource type="PackedScene" uid="uid://cyx5gyb4q2cih" path="res://Bingo/Bingo.tscn" id="2"]
[ext_resource type="Script" path="res://Admin/Bingo_Confirm_Popup.gd" id="4"]

[node name="Bingo_Confirm_Popup" type="PanelContainer"]
offset_left = 244.39
offset_top = 27.0537
offset_right = 758.39
offset_bottom = 589.054
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Bingo!!!"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Bingo_Popup_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Username: "

[node name="Username_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Username"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Creation Date:"

[node name="Creation_Date_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "12:10:20"

[node name="Bingo" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Confirm_Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Confirm"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Reject_Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Reject"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Confirm_Button" to="." method="_on_Confirm_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Reject_Button" to="." method="_on_Reject_Button_pressed"]
